--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -100,6 +100,42 @@
 	--color-teal-light-50: #26b0ff0d;
 
 	--color-yellow-solid-1000: #fec62e;
+
+	/* FIGMA COLORS */
+	--color-primary-100: #e6f0f6;
+	--color-primary-200: #cde2ee;
+	--color-primary-300: #83b7d5;
+	--color-primary-400: #398cbc;
+	--color-primary-500: #0870ac;
+	--color-primary-600: #065989;
+	--color-primary-700: #044367;
+	--color-primary-800: #032c44;
+	--color-primary-900: #011622;
+
+	--color-accent-100: #d4ebea;
+	--color-accent-200: #aad8d6;
+	--color-accent-300: #80c5c2;
+	--color-accent-400: #56b2ae;
+	--color-accent-500: #2c9f9a;
+	--color-accent-600: #237f7b;
+	--color-accent-700: #1a5f5c;
+	--color-accent-800: #113f3d;
+	--color-accent-900: #081f1e;
+
+	--color-gray-100: #fafafa;
+	--color-gray-200: #ebebeba3;
+	--color-gray-300: #e7e7e7;
+	--color-gray-400: #adadad80;
+	--color-gray-500: #85858580;
+	--color-gray-600: #707070;
+	--color-gray-700: #5c5c5c;
+	--color-gray-800: #474747;
+	--color-gray-900: #333333;
+
+	--color-black: #262626;
+	--color-white: #ffffff;
+
+	--color-base-black: 0, 0, 0;
 }
 
 :root {
@@ -343,7 +379,6 @@
 	--font-size-heading-2: 1.75rem;
 	--font-size-heading-3: 1.5rem;
 	--font-size-heading-4: 1.25rem;
-	--font-size-small: 1rem;
 	--font-size-tiny: 0.875rem;
 	--font-size-uppercase: 0.875rem;
 
@@ -352,7 +387,6 @@
 	--line-height-heading-2: 2.25rem;
 	--line-height-heading-3: 2rem;
 	--line-height-heading-4: 1.75rem;
-	--line-height-small: 1.5rem;
 	--line-height-tiny: 1.25rem;
 	--line-height-uppercase: 1.25rem;
 
@@ -362,6 +396,31 @@
 	--font-family-body: var(--font-body, ui-sans-serif), system-ui, sans-serif;
 	--font-family-heading: var(--font-heading, ui-sans-serif), system-ui, sans-serif;
 	--font-family-mono: var(--font-mono, ui-monospace), monospace;
+
+	/* FIGMA */
+	--font-size-h1: 3rem;
+	--font-size-h2: 2.5rem;
+	--font-size-h3: 2.0625rem;
+	--font-size-h4: 1.75rem;
+	--font-size-h5: 1.4375rem;
+	--font-size-h6: 1.1875rem;
+	--font-size-medium: 1rem;
+	--font-size-regular: 1rem;
+	--font-size-small: 0.875rem;
+	--font-size-caption: 0.75rem;
+
+	--line-height-small: 120%;
+	--line-height-large: 150%;
+
+	--letter-spacing-small: -1.5%;
+	--letter-spacing-medium: -1%;
+	--letter-spacing-none: 0%;
+
+	--font-weight-bold: 700;
+	--font-weight-medium: 600;
+	--font-weight-regular: 400;
+
+	/* FIGMA */
 }
 
 @media screen("md") {
