--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,109 @@
-@import url("@/styles/tokens.css");
+/* stylelint-disable custom-property-pattern */
+/* stylelint-disable color-no-hex */
+/* stylelint-disable custom-property-empty-line-before */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind variants;
+@import url("tailwindcss");
+
+@plugin "@tailwindcss/typography";
+@plugin "tailwindcss-animate";
+@plugin "tailwindcss-react-aria-components";
+
+@theme inline {
+	--font-body: var(--_font-body, var(--default-font-family));
+	--font-heading: var(--_font-heading, var(--font-body));
+	--font-code: var(--_font-code, var(--default-mono-font-family));
+}
+
+@theme {
+	--color-primary-100: #e6f0f6;
+	--color-primary-200: #cde2ee;
+	--color-primary-300: #83b7d5;
+	--color-primary-400: #398cbc;
+	--color-primary-500: #0870ac;
+	--color-primary-600: #065989;
+	--color-primary-700: #044367;
+	--color-primary-800: #032c44;
+	--color-primary-900: #011622;
+
+	--color-accent-100: #d4ebea;
+	--color-accent-200: #aad8d6;
+	--color-accent-300: #80c5c2;
+	--color-accent-400: #56b2ae;
+	--color-accent-500: #2c9f9a;
+	--color-accent-600: #237f7b;
+	--color-accent-700: #1a5f5c;
+	--color-accent-800: #113f3d;
+	--color-accent-900: #081f1e;
+
+	--color-gray-100: #fafafa;
+	--color-gray-200: #f2f2f2;
+	--color-gray-300: #e7e7e7;
+	--color-gray-400: #d6d6d6;
+	--color-gray-500: #c2c2c2;
+	--color-gray-600: #9b9b9b;
+	--color-gray-700: #7c7c7c;
+	--color-gray-800: #474747;
+	--color-gray-900: #333;
+
+	--color-black: #262626;
+	--color-white: #fff;
+
+	--text-h1: 2.5rem;
+	--text-h1--line-height: 1.3;
+	--text-h1--font-weight: 700;
+	--text-h1--letter-spacing: -1.5%;
+
+	--text-h2: 1.75rem;
+	--text-h2--line-height: 1.2;
+	--text-h2--font-weight: 700;
+	--text-h2--letter-spacing: -1%;
+
+	--text-h3: 1.5rem;
+	--text-h3--line-height: 1.5;
+	--text-h3--font-weight: 700;
+	--text-h3--letter-spacing: -1%;
+
+	--text-h4: 1.125rem;
+	--text-h4--line-height: 1.5;
+	--text-h4--font-weight: 700;
+	--text-h4--letter-spacing: -1%;
+
+	--text-regular: 1.125rem;
+	--text-regular--line-height: 1.5;
+
+	--text-small: 1rem;
+	--text-small--line-height: 1.5;
+
+	--text-caption: 0.75rem;
+	--text-caption--line-height: 1.5;
+
+	--shadow-light-button: 0px 2px 4px 0px #00000014;
+	--shadow-medium-button: 2px 2px 4px 0px #00000040;
+	--shadow-large-button: 0px 4px 4px 0px #00000040;
+}
+
+/** Color aliases. */
+@theme inline {
+	--color-neutral-100: var(--color-gray-100);
+	--color-neutral-200: var(--color-gray-200);
+	--color-neutral-300: var(--color-gray-300);
+	--color-neutral-400: var(--color-gray-400);
+	--color-neutral-500: var(--color-gray-500);
+	--color-neutral-600: var(--color-gray-600);
+	--color-neutral-700: var(--color-gray-700);
+	--color-neutral-800: var(--color-gray-800);
+	--color-neutral-900: var(--color-gray-900);
+}
+
+@theme {
+	--breakpoint-xs: 30rem;
+	--breakpoint-sm: 40rem;
+	--breakpoint-md: 48rem;
+	--breakpoint-lg: 64rem;
+	--breakpoint-xl: 80rem;
+	--breakpoint-2xl: 96rem;
+	--breakpoint-3xl: 120rem;
+}
 
 @layer base {
 	*,
@@ -33,11 +133,11 @@
 
 	:focus {
 		/** Transparent outline. */
-		@apply outline-none;
+		@apply outline-hidden;
 	}
 
 	:focus-visible {
-		@apply outline outline-2 outline-primary-700 outline-offset-2;
+		@apply outline-solid outline-2 outline-primary-700 outline-offset-2;
 	}
 
 	blockquote {
@@ -45,7 +145,7 @@
 	}
 
 	:is(h1, h2, h3, h4, h5, h6) {
-		font-family: var(--font-family-heading);
+		font-family: var(--font-heading);
 		text-wrap: balance;
 	}
 
