chore: update tailwind plugins

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,9 +3,9 @@
 /* stylelint-disable custom-property-empty-line-before */
 
 @import url("tailwindcss");
+@import url("tw-animate-css");
 
 @plugin "@tailwindcss/typography";
-@plugin "tailwindcss-animate";
 @plugin "tailwindcss-react-aria-components";
 
 @theme inline {
