--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,4 @@
+/* stylelint-disable custom-property-empty-line-before */
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -24,53 +25,73 @@
 }
 
 @theme inline {
+	/** TODO: Use colors from figma. */
+	--color-primary-50: var(--color-blue-50);
+	--color-primary-100: var(--color-blue-100);
+	--color-primary-200: var(--color-blue-200);
+	--color-primary-300: var(--color-blue-300);
+	--color-primary-400: var(--color-blue-400);
+	--color-primary-500: var(--color-blue-500);
+	--color-primary-600: var(--color-blue-600);
+	--color-primary-700: var(--color-blue-700);
+	--color-primary-800: var(--color-blue-800);
+	--color-primary-900: var(--color-blue-900);
+	--color-primary-950: var(--color-blue-950);
+
+	/** TODO: Use colors from figma. */
+	--color-secondary-50: var(--color-sky-50);
+	--color-secondary-100: var(--color-sky-100);
+	--color-secondary-200: var(--color-sky-200);
+	--color-secondary-300: var(--color-sky-300);
+	--color-secondary-400: var(--color-sky-400);
+	--color-secondary-500: var(--color-sky-500);
+	--color-secondary-600: var(--color-sky-600);
+	--color-secondary-700: var(--color-sky-700);
+	--color-secondary-800: var(--color-sky-800);
+	--color-secondary-900: var(--color-sky-900);
+	--color-secondary-950: var(--color-sky-950);
+
+	/** TODO: Use colors from figma. */
+	--color-gray-50: var(--color-zinc-50);
+	--color-gray-100: var(--color-zinc-100);
+	--color-gray-200: var(--color-zinc-200);
+	--color-gray-300: var(--color-zinc-300);
+	--color-gray-400: var(--color-zinc-400);
+	--color-gray-500: var(--color-zinc-500);
+	--color-gray-600: var(--color-zinc-600);
+	--color-gray-700: var(--color-zinc-700);
+	--color-gray-800: var(--color-zinc-800);
+	--color-gray-900: var(--color-zinc-900);
+	--color-gray-950: var(--color-zinc-950);
+
 	--color-neutral-0: var(--color-white);
-	--color-neutral-50: var(--color-zinc-50);
-	--color-neutral-100: var(--color-zinc-100);
-	--color-neutral-200: var(--color-zinc-200);
-	--color-neutral-300: var(--color-zinc-300);
-	--color-neutral-400: var(--color-zinc-400);
-	--color-neutral-500: var(--color-zinc-500);
-	--color-neutral-600: var(--color-zinc-600);
-	--color-neutral-700: var(--color-zinc-700);
-	--color-neutral-800: var(--color-zinc-800);
-	--color-neutral-900: var(--color-zinc-900);
-	--color-neutral-950: var(--color-zinc-950);
+	--color-neutral-50: var(--color-gray-50);
+	--color-neutral-100: var(--color-gray-100);
+	--color-neutral-200: var(--color-gray-200);
+	--color-neutral-300: var(--color-gray-300);
+	--color-neutral-400: var(--color-gray-400);
+	--color-neutral-500: var(--color-gray-500);
+	--color-neutral-600: var(--color-gray-600);
+	--color-neutral-700: var(--color-gray-700);
+	--color-neutral-800: var(--color-gray-800);
+	--color-neutral-900: var(--color-gray-900);
+	--color-neutral-950: var(--color-gray-950);
 	--color-neutral-1000: var(--color-black);
 }
 
-@layer base {
-	:root {
-		--_color-background-base: var(--color-neutral-50);
-		--_color-background-inverse: var(--color-neutral-800);
-		--_color-text-strong: var(--color-neutral-950);
-		--_color-text-weak: var(--color-neutral-600);
-		--_color-text-inverse-strong: var(--color-neutral-100);
-		--_color-text-inverse-weak: var(--color-neutral-400);
-		--_color-text-negative: var(--color-red-600);
-		--_color-text-positive: var(--color-green-600);
-		--_color-stroke-strong: var(--color-neutral-300);
-		--_color-stroke-weak: var(--color-neutral-200);
-		--_color-icon-neutral: var(--color-neutral-600);
-		--_color-focus-outline: var(--color-neutral-950);
-
-		color-scheme: light;
-	}
-}
-
 @theme inline {
-	--color-background-base: var(--_color-background-base);
-	--color-background-inverse: var(--_color-background-inverse);
-	--color-text-strong: var(--_color-text-strong);
-	--color-text-weak: var(--_color-text-weak);
-	--color-text-inverse-strong: var(--_color-text-inverse-strong);
-	--color-text-inverse-weak: var(--_color-text-inverse-weak);
-	--color-text-negative: var(--_color-text-negative);
-	--color-text-positive: var(--_color-text-positive);
-	--color-stroke-strong: var(--_color-stroke-strong);
-	--color-stroke-weak: var(--_color-stroke-weak);
-	--color-icon-neutral: var(--_color-icon-neutral);
-	--color-focus-outline: var(--_color-focus-outline);
+	--color-background-base: var(--color-neutral-50);
+	--color-background-inverse: var(--color-neutral-800);
+	--color-text-strong: var(--color-neutral-950);
+	--color-text-weak: var(--color-neutral-600);
+	--color-text-inverse-strong: var(--color-neutral-100);
+	--color-text-inverse-weak: var(--color-neutral-400);
+	--color-text-negative: var(--color-red-600);
+	--color-text-positive: var(--color-green-600);
+	--color-stroke-strong: var(--color-neutral-300);
+	--color-stroke-weak: var(--color-neutral-200);
+	--color-icon-neutral: var(--color-neutral-600);
+	--color-focus-outline: var(--color-neutral-950);
 }
 
 /** ===============================================================================================
@@ -90,6 +111,7 @@
 		text-size-adjust: none;
 		-webkit-tap-highlight-color: transparent;
 		interpolate-size: allow-keywords;
+		color-scheme: light;
 	}
 
 	:root,
